# GitExpose

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: secret_scanning.yml
.github/workflows/: ci.yml  gitexpose-scan.yml  release.yml
docs/: COVERAGE.md  INTEGRATIONS_CICD.md  INTEGRATIONS_CODE_SCANNING.md  MITRE_ATLAS_COVERAGE.md  README_ADVANCED.md  README_V2.md  USAGE.md  gitexpose_readme.md  v0.4-planning-notes.md  v0.5-planning-notes.md
gitexpose/: __init__.py  cli.py  cli_advanced.py  models.py  paths.py  paths_extended.py  scanner.py  signatures.py
gitexpose/advanced/: __init__.py  api_discovery.py  cicd_scanner.py  cloud_scanner.py  credential_cluster.py  dependency_pinning.py  iac_scanner.py  invisible_unicode_detector.py  known_bad_versions.py  llm_exposure_scanner.py  local_fs_scanner.py  mcp_server.py  ml_model_scanner.py  react2shell_detector.py  skill_security.py  slopsquatting.py  sourcemap_analyzer.py  stealth_scanner.py
gitexpose/core/: __init__.py
gitexpose/data/: __init__.py  credential_patterns_v02.json  loader.py
gitexpose/git/: __init__.py  git_analyzer.py  git_dumper.py
gitexpose/git_history/: __init__.py  diff_parser.py  scanner.py
gitexpose/reporters/: __init__.py  base.py  console.py  csv_reporter.py  cyclonedx_reporter.py  html_reporter.py  json_reporter.py  sarif_reporter.py
gitexpose/secrets/: __init__.py  secret_extractor.py
gitexpose/supply_chain/: correlate.py  cvss.py  osv.py
gitexpose/verification/: banner.py  engine.py  helpers.py
tests/: conftest.py  test_aws_pairing.py  test_correlate.py  test_credential_cluster.py  test_credential_loader.py  test_cvss.py  test_cyclonedx_reporter.py  test_dependency_pinning.py  test_empirical_paths.py  test_existing_patterns_audit.py  test_git_history_cli.py  test_git_history_diff_parser.py  test_known_bad_versions.py  test_langgrinch_pattern.py  test_local_fs_scanner.py  test_lockfile_javascript.py  test_lockfile_parse_all.py  test_mcp_server_kwarg_regression.py  test_models_v02.py  test_osv_client.py  test_reporters_v02.py  test_reporters_v03.py  test_scanner.py  test_signatures.py  test_skill_security.py  test_slopsquatting.py  test_smoke_v03.py  test_smoke_v05.py  test_supply_chain_cli.py  test_supply_chain_cli_v05.py  test_tier3_patterns.py  test_verification_banner.py  test_verification_cli.py  test_verification_engine.py  test_verification_helpers.py  test_verification_providers_code.py  test_verification_providers_llm.py  test_verification_providers_slack.py  test_verification_result.py
tests/fixtures/: requirements_clean.txt  requirements_slopsquat.txt  requirements_teampcp.txt  requirements_unpinned.txt
(+16 files in other folders)
